(feature): simple building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,11 @@
-add_executable(test test.cpp)
+project(Redis-Analog)
+
+include_directories("sources/")
+
+add_library(server STATIC sources/server.cpp)
+add_library(storage STATIC sources/storage.cpp)
+add_library(logger STATIC sources/logger.cpp)
+
+add_executable(Redis-Analog sources/main.cpp)
+
+target_link_libraries(Redis-Analog server storage logger)
