(feature): serverside implemented and some quick fixes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,8 @@ add_executable(LoggerTest logger_test.cpp)
 target_link_libraries(LoggerTest logger gtest gtest_main)
 
 add_test(LoggerTest LoggerTest)
+
+add_executable(ServerTest server_test.cpp)
+target_link_libraries(ServerTest server logger storage gtest gtest_main)
+
+add_test(ServerTest ServerTest)
