(feature): added readme

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -6,4 +6,7 @@ add_library(logger STATIC logger.cpp)
 
 add_executable(Redis-Analog main.cpp)
 
+set_target_properties(Redis-Analog PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/..")
+
 target_link_libraries(Redis-Analog server storage logger)
